--- a/backend/package.json
+++ b/backend/package.json
@@ -7,18 +7,17 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "./node_modules/.bin/nest build && cp ./src/apis/balance/balance.data.json ./dist/apis/balance/balance.data.json && cp ./src/apis/transactions/transactions.data.json ./dist/apis/transactions/transactions.data.json && cp ./src/apis/pots/pots.data.json ./dist/apis/pots/pots.data.json && cp ./src/apis/budget/budget.data.json ./dist/apis/budget/budget.data.json",
-    "build:local": "../backend/node_modules/.bin/nest build && cp ./src/apis/balance/balance.data.json ./dist/apis/balance/balance.data.json && cp ./src/apis/transactions/transactions.data.json ./dist/apis/transactions/transactions.data.json && cp ./src/apis/pots/pots.data.json ./dist/apis/pots/pots.data.json && cp ./src/apis/budget/budget.data.json ./dist/apis/budget/budget.data.json",
-    "format": "../backend/node_modules/.bin/prettier --write \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"/src/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\" \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"../backendneu/test/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"",
-    "start": "npm run build:local && node dist/main.js",
-    "start:dev": "../backend/node_modules/.bin/nest start --watch",
-    "start:debug": "../backend/node_modules/.bin/nest start --debug --watch",
+    "format": "./node_modules/.bin/prettier --write \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"/src/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\" \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"./test/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"",
+    "start": "npm run build && node dist/main.js",
+    "start:dev": "./node_modules/.bin/nest start --watch",
+    "start:debug": "./node_modules/.bin/nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "../backend/node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
-    "test": "../backend/node_modules/.bin/jest",
-    "test:watch": "../backend/node_modules/.bin/jest --watch",
-    "test:cov": "../backend/node_modules/.bin/jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ../backend/node_modules/.bin/jest --runInBand",
-    "test:e2e": "../backend/node_modules/.bin/jest --config test/jest-e2e.json"
+    "lint": "./node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
+    "test": "./node_modules/.bin/jest",
+    "test:watch": "./node_modules/.bin/jest --watch",
+    "test:cov": "./node_modules/.bin/jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/jest --runInBand",
+    "test:e2e": "./node_modules/.bin/jest --config test/jest-e2e.json",
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
