be-3 need for backend in master

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -537,7 +537,7 @@ jobs:
   backend-deploy:
     runs-on: ubuntu-latest
 
-    needs: [frontend-e2e-tests, frontend-gui-tests]
+    needs: [backend-scan, frontend-e2e-tests, frontend-gui-tests]
 
     steps:
       - name: Checkout master
