--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -97,7 +97,7 @@ jobs:
   backend-unit-tests:
     runs-on: ubuntu-latest
 
-    needs: versioning
+    needs: backend-versioning
 
     steps:
       - name: Checkout master
