--- a/nestjs-backend/templates/ingress.yaml
+++ b/nestjs-backend/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "nestjs-backend.fullname" . }}
+  name: {{ .Values.ingress.name }}
   labels:
     {{- include "nestjs-backend.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
@@ -25,7 +25,7 @@ spec:
   {{- end }}
   rules:
     {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ .host }}
       http:
         paths:
           {{- range .paths }}
@@ -35,7 +35,7 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "nestjs-backend.fullname" $ }}
+                name: {{ include "nestjs-backend.servicename" . }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
