--- a/nestjs-backend/templates/service.yaml
+++ b/nestjs-backend/templates/service.yaml
@@ -1,15 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nestjs-backend.fullname" . }}
+  name: {{ include "nestjs-backend.servicename" . }}
   labels:
     {{- include "nestjs-backend.labels" . | nindent 4 }}
+  namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
       name: http
   selector:
+    app: {{ .Chart.Name }}
     {{- include "nestjs-backend.selectorLabels" . | nindent 4 }}
