--- a/nestjs-backend/values.yaml
+++ b/nestjs-backend/values.yaml
@@ -3,15 +3,15 @@
 # Declare variables to be passed into your templates.
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
+replicaCount: 2
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: nginx
+  repository: registry.digitalocean.com/kephalosk/nestjs-backend
   # This sets the pull policy for images.
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: latest
 
 # This is for the secretes for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
@@ -54,24 +54,33 @@ service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
+  containerPort: 3000
+  targetPort: 3000
   port: 80
 
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
+  enabled: true
+  className: nginx
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: backend.philippkraatz.com
       paths:
-        - path: /
+        - path: /api(/|$)(.*)
           pathType: ImplementationSpecific
-  tls: []
+  tls:
+    - hosts:
+        - backend.philippkraatz.com
+      secretName: nestjs-backend-tls
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+  name: nestjs-backend-ingress
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -121,3 +130,15 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+namespace: default
+
+author: kephalosk
+
+certificate:
+  name: backend-philippkraatz-com-cert
+  secretName: nestjs-backend-tls
+  clusterIssuerName: letsencrypt-prod
+
+hosts:
+  backend: backend.philippkraatz.com
