be-4 fix typos in helm templates

--- a/personal-finance-app/values.yaml
+++ b/personal-finance-app/values.yaml
@@ -153,3 +153,9 @@ clusterissuer:
   class: nginx
   server: https://acme-v02.api.letsencrypt.org/directory
   email: watchfromtheshore@gmail.com
+
+deployment:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 1
+  minReadySeconds: 5
