--- a/deployment/nestjs-backend.yaml
+++ b/deployment/nestjs-backend.yaml
@@ -10,6 +10,11 @@ spec:
   selector:
     matchLabels:
       app: nestjs-backend
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  minReadySeconds: 5
   template:
     metadata:
       labels:
