--- a/nestjs-backend/templates/ingress.yaml
+++ b/nestjs-backend/templates/ingress.yaml
@@ -5,10 +5,11 @@ metadata:
   name: {{ .Values.ingress.name }}
   labels:
     {{- include "nestjs-backend.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    cert-manager.io/cluster-issuer: {{ .Values.certificate.clusterIssuerName | quote }}
+    {{- with .Values.ingress.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   {{- with .Values.ingress.className }}
   ingressClassName: {{ . }}
@@ -18,7 +19,7 @@ spec:
     {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
-        - {{ . | quote }}
+        - {{ . }}
         {{- end }}
       secretName: {{ .secretName }}
     {{- end }}
@@ -35,7 +36,7 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "nestjs-backend.servicename" . }}
+                name: {{ include "nestjs-backend.servicename" $ }}
                 port:
                   number: {{ $.Values.service.port }}
           {{- end }}
