--- a/nestjs-backend/values.yaml
+++ b/nestjs-backend/values.yaml
@@ -63,7 +63,6 @@ ingress:
   enabled: true
   className: nginx
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     # kubernetes.io/ingress.class: nginx
@@ -142,3 +141,9 @@ certificate:
 
 hosts:
   backend: backend.philippkraatz.com
+
+deployment:
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 1
+  minReadySeconds: 5
