--- a/personal-finance-app/templates/ingress.yaml
+++ b/personal-finance-app/templates/ingress.yaml
@@ -5,10 +5,11 @@ metadata:
   name: {{ .Values.ingress.name }}
   labels:
     {{- include "personal-finance-app.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    cert-manager.io/cluster-issuer: {{ .Values.certificate.clusterIssuerName | quote }}
+    {{- with .Values.ingress.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   {{- with .Values.ingress.className }}
   ingressClassName: {{ . }}
@@ -18,7 +19,7 @@ spec:
     {{- range .Values.ingress.tls }}
     - hosts:
         {{- range .hosts }}
-        - {{ . | quote }}
+        - {{ . }}
         {{- end }}
       secretName: {{ .secretName }}
     {{- end }}
