--- a/personal-finance-app/values.yaml
+++ b/personal-finance-app/values.yaml
@@ -1,6 +1,7 @@
 # Default values for personal-finance-app.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+serviceVersion: 0.0.20241117_134907_5f3c3f2_20241117_134917
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: 3
