--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -128,6 +128,12 @@ jobs:
           npm install
 
       - name: Run Backend E2E Tests
+        env:
+          DATABASE_HOST: "postgresql-database-do-user-16267792-0.m.db.ondigitalocean.com"
+          DATABASE_PORT: "25060"
+          DATABASE_USERNAME: "doadmin"
+          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          DATABASE_NAME: "defaultdb"
         run: |
           cd backend
           npm run test:e2e
