df-8-deploy-only-all-together

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -492,7 +492,7 @@ jobs:
   frontend-deploy:
     runs-on: ubuntu-latest
     
-    needs: [frontend-e2e-tests, frontend-gui-tests]
+    needs: [frontend-e2e-tests, frontend-gui-tests, backend-scan]
 
     steps:
       - name: Checkout master
