--- a/product-documentation/cdc/pots-GET.yaml
+++ b/product-documentation/cdc/pots-GET.yaml
@@ -18,6 +18,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/APIPotDTO'
+        '404':
+          description: Pots not found.
         '500':
           description: Interner Serverfehler, wenn ein Fehler beim Abrufen der Pots auftritt.
 
